--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node game/game.js",
-    "test": "node tests"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/Umenokin/tiny-robot/issues"
   },
-  "homepage": "https://github.com/Umenokin/tiny-robot#readme"
+  "homepage": "https://github.com/Umenokin/tiny-robot#readme",
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.0.0"
+  }
 }
