--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "tests"
   },
   "scripts": {
-    "start": "node game/game.js",
-    "test": "mocha"
+    "start": "tsc && node dist/game/game.js",
+    "test": "tsc && mocha 'dist/tests/**/*.js'",
+    "mocha": "mocha -h"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,11 @@
   },
   "homepage": "https://github.com/Umenokin/tiny-robot#readme",
   "devDependencies": {
+    "@types/chai": "^4.2.18",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.12.2",
     "chai": "^4.3.4",
-    "mocha": "^9.0.0"
+    "mocha": "^9.0.0",
+    "typescript": "^4.3.2"
   }
 }
