--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "start": "tsc && node dist/game/game.js",
+    "lint": "eslint ./src/**/*",
     "test": "tsc && mocha 'dist/tests/**/*.js'",
     "mocha": "mocha -h"
   },
@@ -21,12 +22,18 @@
     "url": "https://github.com/Umenokin/tiny-robot/issues"
   },
   "homepage": "https://github.com/Umenokin/tiny-robot#readme",
+  "dependencies": {
+    "chai": "^4.3.4"
+  },
   "devDependencies": {
     "@types/chai": "^4.2.18",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.12.2",
-    "chai": "^4.3.4",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "eslint": "^7.28.0",
+    "eslint-config-favoritemedium-typescript": "^2.10.0",
+    "eslint-plugin-import": "^2.23.4",
     "mocha": "^9.0.0",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.3"
   }
 }
