--- a/package.json
+++ b/package.json
@@ -34,6 +34,13 @@
     "eslint-config-favoritemedium-typescript": "^2.10.0",
     "eslint-plugin-import": "^2.23.4",
     "mocha": "^9.0.0",
-    "typescript": "^4.3.3"
+    "typescript": "^4.3.3",
+    "husky": "^4.2.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm run test",
+      "pre-push": "npm run lint && npm run test"
+    }
   }
 }
